--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@heroicons/react": "^1.0.6",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
+    "@mui/styled-engine-sc": "^5.10.1",
     "firebase": "^9.9.2",
     "next": "latest",
     "react": "18.1.0",
@@ -15,6 +19,7 @@
     "react-hook-form": "^7.34.1",
     "react-icons": "^4.4.0",
     "recoil": "^0.7.5",
+    "styled-components": "^5.3.5",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
